# [project]
# name = "lumache"
# authors = [{name = "Graziella", email = "graziella@lumache"}]
# dynamic = ["version", "description"]

[tool.poetry]
name = "lumache"
version = "0.1.0"
description = "Lumache | Read the Docs Tutorial"
authors = ["Carlos Regis <cr@carlosregis.com>"]
readme = "README.md"
license = "MIT"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.5"
sphinx-rtd-theme = "^1.3.0"
