[tool.poetry]
name = "lumache"
version = "0.1.0"
description = "Lumache | Read the Docs Tutorial"
authors = ["Carlos Regis <cr@carlosregis.com>"]
readme = "README.md"
license = "MIT"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1.6.1",
]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.5"
sphinx-rtd-theme = "^1.3.0"
