[tool.poetry]
name = "lumache"
version = "0.1.0"
description = "Lumache | Read the Docs Tutorial"
authors = ["Carlos Regis <cr@carlosregis.com>"]
readme = "README.rst"
license = "MIT"

[build-system]
requires = [
  "poetry-core>=1.6",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10.8"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.5"
sphinx-rtd-theme = "^1.3.0"
